--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
+    <!-- Se modificó esta parte para referenciar la ruta correcta del css -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>APIs</title>
 </head>
 <body>
     <p class="name"></p>
     <p class="blog"></p>
+    <!-- Se agregó la clase location para poder mostrarlo en DOM -->
+    <p class="location"></p>
+    
 
-  <script src="../assets/js/app.js"></script>
+    <!-- Se modificó esta parte para referenciar la ruta correcta del script -->
+  <script src="./assets/js/app.js"></script>
 </body>
 </html>
